<resources>
    <string name="app_name" translatable="false">Two Rooms and a boom</string>
    <string name="title_set_detail">set Detail</string>
    <string name="title_role_list">Roles</string>
    <string name="title_role_detail">Role Detail</string>
    <string name="title_activity_create_set">Create new set</string>
    <string name="title_activity_choose_role">Choose roles</string>
	<string name="title_dialog_change_name">Enter new name</string>
    <string name="action_settings">Settings</string>
    <string name="menu_set_create">Create set</string>
    <string name="menu_sort_Alphabet">Sort alphabetically</string>
    <string name="menu_sort_group">Sort by group</string>
    <string name="hint_set_name">Name of the set</string>
    <string name="hint_search_query">Enter number of players</string>
    <string name="hint_set_desc">Set description</string>
    <string name="default_new_variation">Set variation</string>
    <string name="button_save_set">Finish and save</string>
    <string name="button_change_set">Change Set</string>
    <string name="button_new_variation">Create new Variation</string>
	<string name="warning_change_set">Existing variations will not change.</string>
	<string name="error_set_name">Please enter a name.</string>
	<string name="error_set_roles">Please select the basic roles for the set.</string>
	<string name="action_delete">Delete</string>
	<string name="action_rename">Rename</string>
    <string name="no_filter">No Filter</string>
    <string name="title_dialog_role_description">Role description</string>
    <string name="warning_no_settings" translatable="false">Settings are not yet implemented.</string>
    <string name="title_activity_role_list">List of roles</string>
    <string name="action_roles">Roles</string>
    <string name="account_name" translatable="false">TwoRoomsSync</string>
    <string name="account_authority" translatable="false">de.lehrbaum.tworooms.database</string>
    <string name="account_type" translatable="false">de.lehrbaum.tworooms</string>
    <string name="pref_language">Language of roles/descriptions</string>
    <string name="pref_choose_lang">Choose one of the supported languages.</string>
    <string name="pref_default_lang" translatable="false">en</string>
    <string name="pref_lang_en">English</string>
    <string name="pref_lang_de">German</string>
    <string name="title_activity_settings">Settings</string>
</resources>
